--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,4 +1,5 @@
 {
+    "html.format.indentInnerHtml": true,
     "window.zoomLevel": 2,
     "editor.fontSize": 16,
     "editor.hover.enabled": true,
